--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-query-devtools": "^5.82.0",
+    "@viivue/easy-popup": "^1.3.0",
     "gsap": "^3.13.0",
     "next": "15.3.2",
     "react": "^19.0.0",
