feat: refactor myRoom and add zustand

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stats.js": "^0.17.0",
     "three": "^0.176.0",
-    "three-stdlib": "^2.36.0"
+    "three-stdlib": "^2.36.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
