--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/stats.js": "^0.17.4",
     "@types/three": "^0.176.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
