--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.82.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.8",
+    "lil-gui": "^0.20.0",
     "next": "15.4.6",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
